2005-11-30  Robert Schuster  <robertschuster@fsfe.org>

	* java/beans/PropertyChangeSupport.java:
	(fireIndexedPropertyChange): Completed statement.

2005-11-30  Robert Schuster  <robertschuster@fsfe.org>

	* java/beans/PropertyChangeSupport.java:
	(fireIndexedPropertyChange): Removed argument checking.

2005-11-30  Jan Roehrich  <jan@roehrich.info>

	* java/awt/datatransfer/SystemFlavorMap.java
	(isJavaMIMEType): implemented.
	(GNU_JAVA_MIME_PREFIX): added constant.
	(decodeJavaMIMEType): implemented.
	(encodeJavaMIMEType): implemented.
	(encodeDataFlavor): implemented.

2005-11-30  Jan Roehrich  <jan@roehrich.info>

	* java/awt/datatransfer/SystemFlavorMap.java
	Some minor codestyle fixes.
	(nativeToFlavorMap): removed generalization.
	(flavorToNativeMap): likewise.

2005-11-29  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(actionPerformed): Changed to update list with all 
	selected intervals, and to use fileTablePanel instead.
	(actionPerformed): Likewise.
	(propertyChange): Changed to use addSelectionInterval
	instead of setSelectionInterval.
	(uninstallComponents): Uninstalled fileTablePanel.
	(installListeners): Moved code to createList, so listeners
	are installed for every list that may be created.
	(createList): Added code to remove and install listeners on
	list.
	(createDetailsView): Changed to use own panel. Also, added
	code to set the selection mode.

2005-11-29  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(mouseClicked): Fixed checks to prevent NPE.

2005-11-29  Lillian Angel  <langel@redhat.com>

	* javax/swing/JViewport.java
	(setView): Added check to prevent NPE.
	* javax/swing/plaf/basic/BasicFileChooserUI.java
	(ListLabelRenderer): Removed class, never used.
	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(DetailTableModel): Removed, not needed.
	(TableFileRenderer): Implemented to override some color
	and icon defaults in the default table renderer.